# SSLProxyManager-Tauri

./: .gitattributes  .gitignore  Cargo.toml  LEGAL.md  OPTIMIZATION_V3.md  OPTIMIZATION_V4.md  README.md  README_zh.md  benchmark.sh  build_pgo.sh  config.toml.example  package-lock.json  package.json  sync-version.ts  tauri.conf.json  test_performance.sh  verify_optimization_v3.sh
.github/workflows/: build.yml  manual-build-single-platform.yml
capabilities/: default.json
frontend/: chart-preview-interactive.html  components.d.ts  index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  vite.config.ts
frontend/public/: chart-preview.html
frontend/src/: App.vue  api.ts  chart-preview-main.ts  main.ts  style.css
frontend/src/components/: About.vue  AccessControl.vue  BaseConfig.vue  ChartPreviewPage.vue  ConfigCard.vue  ConfigManage.vue  Dashboard.vue  LanguageSelector.vue  LogViewer.vue  MetricsStorage.vue  RequestLogs.vue  Sidebar.vue  StreamProxyConfig.vue  SystemMetrics.vue  TermsDialog.vue  TestTools.vue  TitleBar.vue  WsProxyConfig.vue
frontend/src/components/base-config/: BaseConfigGeneralTab.vue  BaseConfigSnapshotsTab.vue  BaseConfigWebhookTab.vue  types.ts
frontend/src/composables/: lazyDashboardVChart.ts  lazyEcharts.ts  lazySystemMetricsVChart.ts  useAppShellPreferences.ts  useDBStatus.ts  useDateShortcuts.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/chart-preview/: en-US.json  zh-CN.json
frontend/src/i18n/locales/: en-US.json  zh-CN.json
frontend/src/styles/: animations.css
icons/: icon.icns
src/: README.md  access_control.rs  access_control_test.rs  alerting.rs  app.rs  buffer_pool.rs  cache_optimizer.rs  commands.rs  config.rs  hot_reload.rs  i18n.rs  main.rs  metrics.rs  metrics_models.rs  network_optimizer.rs  proxy.rs  proxy_auth.rs  proxy_context.rs  proxy_early.rs  proxy_lifecycle.rs  proxy_matching.rs  proxy_request.rs  proxy_runtime.rs  proxy_server.rs  proxy_static.rs  proxy_upstream.rs  rate_limit.rs  single_instance.rs  stream_proxy.rs  system_metrics.rs  test_tools.rs  tray.rs  update.rs  ws_proxy.rs
src/commands/: config.rs  metrics.rs  mod.rs  system.rs  tools.rs  ui.rs
src/metrics/: README.md  db.rs  helpers.rs  mod.rs  models.rs  query.rs  writer.rs
src/proxy/: README.md  auth.rs  context.rs  dispatch.rs  early.rs  helpers.rs  lifecycle.rs  listen.rs  logging.rs  matching.rs  mod.rs  request.rs  response.rs  runtime.rs  server.rs  static_files.rs  stream_proxy.rs  types.rs  upstream.rs  ws_proxy.rs
src/system_metrics/: README.md  mod.rs  prelude.rs  query.rs  realtime.rs  sampler.rs  service.rs  state.rs  types.rs  writer.rs
src/system_metrics/collect/: linux.rs  mod.rs  windows.rs
