[package]
name = "SSLProxyManager"
version = "1.0.5"
description = "SSL 代理管理工具"
repository = "https://github.com/userfhy/SSLProxyManager-Tauri"
authors = ["fhy"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-autostart = "2.0"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
once_cell = "1.20"
parking_lot = "0.12"
semver = "1.0"
uuid = { version = "1.10", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
single-instance = "0.3"
axum = "0.8.8"
hyper = "1.8.1"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-rustls = "0.26.4"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
url = "2.5.8"

[features]
# 默认启用所有功能
default = []
