[package]
name = "SSLProxyManager"
version = "1.0.11"
description = "SSL 代理管理工具"
repository = "https://github.com/userfhy/SSLProxyManager-Tauri"
authors = ["fhy"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0", features = [] }

[dependencies]
tauri = { version = "^2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "^2.0"
tauri-plugin-shell = "^2.0"
tauri-plugin-opener = "^2.0"
tauri-plugin-autostart = "^2.0"
tauri-plugin-process = "^2.0"
tauri-plugin-single-instance = "^2.0"
dashmap = "6.1"

rfd = "^0.14"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "^0.12", features = ["json", "stream"] }
toml = "^0.8"
sqlx = { version = "^0.8", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "^1.0"
async-trait = "^0.1"
thiserror = "^2.0"
once_cell = "^1.20"
parking_lot = "^0.12"
semver = "^1.0"
uuid = { version = "^1.10", features = ["v4"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["chrono"] }
chrono = "^0.4"
base64 = "^0.22"
sha2 = "^0.10"
hex = "^0.4"

axum = { version = "^0.8", features = ["ws"] }
hyper = "^1.8"
hyper-util = { version = "^0.1", features = ["tokio"] }
http-body-util = "^0.1"
tokio-rustls = "^0.26"
rustls = "^0.23"
rustls-pemfile = "^2.2"
tower = "^0.5"
tower-http = { version = "^0.6", features = ["fs", "compression-gzip", "compression-br"] }
axum-server = { version = "^0.7", features = ["tls-rustls"] }
url = "^2.5"

# WS upstream client
tokio-tungstenite = { version = "^0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "^0.3"

# 正则表达式支持（用于URL重写）
regex = "^1.11"

[features]
# 默认启用所有功能
default = []
