[package]
name = "SSLProxyManager"
version = "1.0.21"
description = "SSL 代理管理工具"
repository = "https://github.com/userfhy/SSLProxyManager-Tauri"
authors = ["fhy"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "^2"
tauri-plugin-shell = "^2"
tauri-plugin-opener = "^2"
tauri-plugin-autostart = "^2"
tauri-plugin-process = "^2"
tauri-plugin-single-instance = "^2"
dashmap = "6.1"

rfd = "^0.17"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "parking_lot"] }
reqwest = { version = "^0.13", features = ["json", "stream", "http2"] }
toml = "^0.8"
sqlx = { version = "^0.8", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = "^1.0"
async-trait = "^0.1"
thiserror = "^2.0"
once_cell = "^1.20"
parking_lot = "^0.12"
semver = "^1.0"
uuid = { version = "^1.10", features = ["v4"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["chrono", "env-filter"] }
chrono = "^0.4"
base64 = "^0.22"
sha2 = "^0.10"
hex = "^0.4"
urlencoding = "^2.1"
bytes = "^1.9"
mimalloc = "0.1"

axum = { version = "^0.8", features = ["ws"] }
hyper = "^1.8"
hyper-util = { version = "^0.1", features = ["tokio"] }
http-body-util = "^0.1"
tokio-rustls = "^0.26"
rustls = "^0.23"
rustls-pemfile = "^2.2"
rcgen = "^0.14"
webpki-roots = "^0.26"
x509-parser = "^0.16"
tower = "^0.5"
tower-http = { version = "^0.6", features = ["fs", "compression-gzip", "compression-br"] }
axum-server = { version = "^0.8", features = ["tls-rustls"] }
url = "^2.5"

# WS upstream client
tokio-tungstenite = { version = "^0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "^0.3"

# 正则表达式支持（用于URL重写）
regex = "^1.11"

# 性能优化依赖
lru = "^0.16"           # LRU 缓存
socket2 = "^0.6"        # 底层 socket 控制
smallvec = "^1.15"      # 栈上小数组优化

[features]
# 默认启用所有功能
default = []

[profile.release]
opt-level = 3           # 最高优化级别
lto = "fat"             # 完整 LTO（更激进，编译慢但性能更好）
codegen-units = 1       # 减少代码生成单元以提升优化效果
strip = true            # 移除调试符号，减小二进制体积
panic = "abort"         # panic 时直接中止，减小二进制体积
overflow-checks = false # 禁用溢出检查（生产环境）
incremental = false     # 禁用增量编译以获得更好的优化

[profile.release.package."*"]
opt-level = 3

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "^0.61.2", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_System_Performance",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
] }
